# stage_ros

./: .gitignore  CMakeLists.txt  package.xml
src/: convert_world_file.cpp  stageros.cpp
