<?xml version="1.0"?>
<package>
  <name>stage_ros_pm</name>
  <version>1.8.0</version>
  <description>This package provides ROS specific hooks for stage</description>

  <maintainer email="enrico.piazza@polimi.it">Enrico Piazza</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/Enri2077/stage_ros</url>

  <author email="gerky@osrfoundation.org">Brian Gerky</author>
  <author email="enrico.piazza@polimi.it">Enrico Piazza</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stage</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>stage</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
</package>
